k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: lumen
  name: lumen
  namespace: sang-lumen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lumen
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lumen
    spec:
      containers:
        - image: 10.144.233.86:8082/sang/lumen-txy:latest
          imagePullPolicy: Always
          name: lumen-app
          ports:
            - name: tcp-8080
              containerPort: 8080
          resources:
            limits:
              cpu: '4'
              memory: 2040Mi
            requests:
              cpu: 200m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 20
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 20
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 8
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      imagePullSecrets:
        - name: secret-docker-harbor
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
kind: Service
apiVersion: v1
metadata:
  name: lumen
  namespace: sang-lumen
  labels:
    app: lumen
spec:
  clusterIP: 10.103.93.204
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lumen
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sang-lumen
  name: ingress-lumen
  labels:
    name: ingress-lumen
  annotations:
    name: kubernetes.io/ingress.class
spec:
  rules:
    - host: www.sang.lumen.com
    - http:
        paths:
          - backend:
              service:
                name: lumen
                port:
                  number: 8080
            pathType: Prefix
            path: /lumen
